# TinyTorch

./: .buildinfo  .claude-startup-check.md  .cursorrules  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .shared-ai-rules.md  AGENT_WORKFLOW_RESPONSIBILITIES.md  API_SIMPLIFICATION_COMPLETE.md  ARCHITECTURAL_FIX.md  ARCHITECTURE.md  BACKEND_INTEGRATION_EXAMPLE.py  CLAUDE.md  CLAUDE_SIMPLE.md  CNAME  COMMAND_HIERARCHY.md  COMMIT_LOG.txt  COMPREHENSIVE_MODULE_REVIEW.md  COMPREHENSIVE_STATUS_REPORT.md  COMPRESSION_AUDIT.md  CONTRIBUTING.md  COURSE_GUIDE.md  DECEMBER_2024_RELEASE.md  DEPLOYMENT_SYSTEM_ISSUE.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FIVE_CS_FORMAT_STANDARD.md  GRADIENT_FLOW_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  LAYERS_MODIFICATION_EXAMPLE.py  MARKDOWN_BEST_PRACTICES.md  MILESTONES_UPDATE_SUMMARY.md  MILESTONE_CRITERIA.md  MILESTONE_VERIFICATION_SUMMARY.md  MODULE_14_COMPLETION_REPORT.md  MODULE_14_REVIEW.md  MODULE_ANALYSIS_SUMMARY.md  MODULE_DEVELOPMENT_GUIDELINES.md  (+183 more)
.claude/: AGENT_REFERENCE.md  CONSOLIDATED_KNOWLEDGE_BASE.md  README.md  UNIVERSAL_TEMPLATE.md
.git-rewrite/: backup-refs  commit  message  parse  raw-refs  revs
.tito/: progress.json
_proc/: sidebar.yml
_reviews/: 01_setup_readability.md  02_tensor_readability.md  03_activations_readability.md  04_layers_readability.md  05_losses_readability.md  06_autograd_readability.md  08_training_readability.md  09_spatial_readability.md  10_dataloader_readability.md  10_optimizers_readability.md  12_normalization_readability.md  13_attention_readability.md  13_regularization_readability.md  16_acceleration_readability.md  16_mlops_readability.md  17_capstone_readability.md  18_compression_readability.md  19_caching_readability.md  20_benchmarking_readability.md  20_leaderboard_readability.md  COMPREHENSIVE_READABILITY_ASSESSMENT.md  FINAL_MODULE_TESTING_REPORT.md  READABILITY_FIXES_SUMMARY.md  module_structure_clarification.md
_sources/: datasets.md  intro.md  learning-progress.md  resources.md
binder/: ASSIGNMENTS_DYNAMIC.md  BENCHMARK_COMMUNITY_COMMANDS.md  BUILD_INTEGRATION.md  CLEANUP_NOTES.md  CLOUD_NOTEBOOK_OPTIONS.md  COMMUNITY_BENCHMARK_DESIGN.md  COMMUNITY_DATA_COLLECTION.md  COMMUNITY_EXPERT_RECOMMENDATION.md  COMMUNITY_MAP_VISION.md  LAUNCH_READINESS.md  MARIMO_INTEGRATION.md  MARIMO_NBGRADER_COMPATIBILITY.md  MARIMO_SETUP.md  MODULE_ORDER.md  NOTEBOOK_PLATFORM_RECOMMENDATION.md  ONLINE_VS_LOCAL.md  PAPER_DOCUMENTATION_SYNC.md  PAPER_FILE_REQUIREMENTS.md  README.md  SETUP_PHASE_COMMUNITY_INTEGRATION.md  VERIFY.md  requirements.txt
book/: CONTENT_IMPROVEMENTS.md  THEME_DESIGN.md  _config.yml  _toc.yml  checkpoint-system.md  command-reference.md  community.md  convert_modules.py  convert_readmes.py  faq.md  instructor-guide.md  intro.md  kiss-principle.md  leaderboard.md  learning-progress.md  learning-timeline.md  milestone-system.md  quickstart-guide.md  requirements.txt  resources.md  test_publish.txt  testing-framework.md  user-manual.md  verify_build.py  vision.md
capabilities/: 01_tensor_operations.py  02_neural_intelligence.py  03_forward_inference.py  04_image_processing.py  05_attention_visualization.py  06_data_pipeline.py  07_full_training.py  08_model_compression.py  09_performance_profiling.py  10_production_systems.py  11_tinygpt_mastery.py  CAPABILITY_SHOWCASE_SUMMARY.md  README.md  run_showcase.py  test_showcases.py
capstone-ideas/: README.md  ai-olympics.md
chapters/: 00-introduction.html  learning-journey.html  milestones.html
datasets/: DATASET_ANALYSIS.md  README.md  download_mnist.py  pytorch_validation_report.json
demos/: README.md  demo_activations.py  demo_attention.py  demo_cifar10_training.py  demo_language.py  demo_single_neuron.py  demo_tensor_math.py  demo_training.py  demo_vision.py  demo_xor_network.py
dev/: .buildinfo  checkpoint-system.html  community.html  credits.html  datasets.html  faq.html  genindex.html  getting-started.html  instructor-guide.html  intro.html  learning-journey-visual.html  objects.inv  prerequisites.html  quickstart-guide.html  resources.html  search.html  searchindex.js  student-workflow.html  testing-framework.html  tito-essentials.html
docs/: BASELINE_SUBMISSION_DESIGN.md  BENCHMARK_NORMALIZATION.md  COMMUNITY_BENCHMARK_IMPLEMENTATION.md  CONFIGURATION_SETUP.md  DOCUMENTATION_STRUCTURE.md  EXPERT_ANALYSIS_SETUP_VALIDATION.md  EXPERT_FEEDBACK_REQUEST.md  EXPERT_OPINION_REQUEST.md  INSTRUCTOR_GUIDE.md  JSON_FORMATS.md  MASTER_PLAN_OF_RECORD.md  PDF_BUILD_PLAN.md  PDF_BUILD_README.md  README.md  REORGANIZATION_MIGRATION_GUIDE.md  RESTRUCTURING_VERIFICATION.md  STUDENT_GUIDE.md  STUDENT_QUICKSTART.md  _config.yml  _config_pdf.yml  _toc_pdf.yml  agent_workflow_case_study.md  build-tinytorch-pdf.sh  build.sh  checkpoint-system.md  cifar10-training-guide.md  complete-beautiful-flow.md  cover.md  for-instructors.md  intro.md  learning-progress.md  milestone-implementation-guide.md  milestone-system-overview.md  milestone-system.md  module-audit.md  module-plan-final.md  module-reordering-plan.md  modules-15-20-detailed-outline.md  optimization-module-naming-analysis.md  optimization-modules-tutorial-plan.md  (+9 more)
examples/: CAPABILITIES.md  INTEGRATION_FIX_PROCESS.md  MILESTONE_TEMPLATE.py  MODERN_API_EXAMPLES.md  README.md  cifar10_inference.py  data_manager.py  mnist_inference.py  optimization_pipeline_complete.py  profile_and_optimize_demo.py  quantize_and_compress_demo.py  utils.py
milestones/: .milestone_progress.json  FINAL_MODULE_STRUCTURE.md  MILESTONE_NARRATIVE_FLOW.md  MILESTONE_STRUCTURE_GUIDE.md  MILESTONE_TEMPLATE.py  MILESTONE_TEMPLATE_V2.py  MODULE_AUDIT.md  MODULE_BALANCE_AUDIT.md  MODULE_ORDER_ANALYSIS.md  MODULE_TO_MILESTONE_MAPPING.md  README.md  data_manager.py  milestone_dashboard.py  milestones.yml  networks.py  utils.py
modules/: 01_tensor_ABOUT.html  02_activations_ABOUT.html  03_layers_ABOUT.html  04_losses_ABOUT.html  05_autograd_ABOUT.html  06_optimizers_ABOUT.html  07_training_ABOUT.html  08_dataloader_ABOUT.html  10_tokenization_ABOUT.html  (+12 more)
site/: conf.py  (+21 more)
(+1938 files in other folders)
